--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,7 +6,6 @@ set(CMAKE_C_FLAGS "-Wall")
 
 if (WIN32)
   set_source_files_properties(glview.c PROPERTIES LANGUAGE CXX)
-  set_source_files_properties(regview.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(glpclview.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(hiview.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(tiltdemo.c PROPERTIES LANGUAGE CXX)
@@ -18,7 +17,6 @@ if (WIN32)
 endif()
 
 add_executable(glview glview.c)
-add_executable(regview regview.c)
 add_executable(hiview hiview.c)
 if(BUILD_AUDIO)
   add_executable(wavrecord wavrecord.c)
@@ -28,7 +26,10 @@ endif()
 if (BUILD_C_SYNC)
   add_executable(glpclview glpclview.c)
   add_executable(tiltdemo tiltdemo.c)
-  add_executable(regtest regtest.c)
+endif()
+
+if (BUILD_rMARY)
+  add_executable(glpclsoundrec glpclsoundrec.c)
 endif()
 
 # We need to include libfreenect_sync.h for glpclview
@@ -38,7 +39,6 @@ include_directories (../wrappers/c_sync/)
 if(APPLE)
   set(CMAKE_EXE_LINKER_FLAGS "-framework OpenGL -framework GLUT")
   target_link_libraries(glview freenect)
-  target_link_libraries(regview freenect)
   target_link_libraries(hiview freenect)
   if (BUILD_AUDIO)
     target_link_libraries(wavrecord freenect)
@@ -47,7 +47,6 @@ if(APPLE)
   if (BUILD_C_SYNC)
     target_link_libraries(glpclview freenect_sync)
     target_link_libraries(tiltdemo freenect_sync)
-    target_link_libraries(regtest freenect_sync)
   endif()
 # Linux, not so much
 else()
@@ -65,7 +64,6 @@ else()
   endif()
 
   target_link_libraries(glview freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
-  target_link_libraries(regview freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
   target_link_libraries(hiview freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
   if (BUILD_AUDIO)
     target_link_libraries(wavrecord freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
@@ -75,12 +73,14 @@ else()
     target_link_libraries(glpclview freenect_sync ${OPENGL_LIBRARIES} ${GLUT_LIBRARY}
  ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
     target_link_libraries(tiltdemo freenect_sync ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
-    target_link_libraries(regtest freenect_sync ${CMAKE_THREAD_LIBS_INIT})
+  endif()
+  if (BUILD_rMARY)
+    target_link_libraries(glpclsoundrec freenect_sync freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB}) 
   endif()
 endif()
 
 
-install (TARGETS glview regview hiview
+install (TARGETS glview hiview
   DESTINATION bin)
 
 if (BUILD_C_SYNC)
@@ -91,4 +91,8 @@ endif()
 if (BUILD_AUDIO)
   install (TARGETS wavrecord DESTINATION bin)
   install (TARGETS micview DESTINATION bin)
+endif()
+
+if (BUILD_rMARY)
+  install (TARGETS glpclsoundrec DESTINATION bin)
 endif()
